language/java/AntlrDemo/src/main/java/com/learningjava/antlr/Expr/Expr.g4
grammar Expr;

prog: stat+; // the start rule

stat: expr NEWLINE
    | ID '=' expr NEWLINE
    | NEWLINE
    ;

expr: expr ('*' | '/') expr
    | expr ('+' | '-') expr
    | INT
    | ID
    | '(' expr ')'
    ;

ID: [a-zA-Z]+ ;
INT: [0-9]+;
NEWLINE: '\r' ? '\n';
WS: [ \t]+ ->skip;
